# paopao-cli

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml  python-publish.yml  release.yml
paopao_cli/: __init__.py  __main__.py  main.py  repl.py
paopao_cli/paopao/: version.py
paopao_cli/paopao/api/: runtime.py
paopao_cli/paopao/backend/: http.py
paopao_cli/paopao/config/: metadata.py
paopao_cli/paopao/core/: exceptions.py
paopao_cli/ppc_addon/test/: ppc.project.json
paopao_cli/ppc_addon/test/commands/: test_addon2.py
paopao_cli/ppc_commands/: head.py  passgen.py  sado.py  today.py  treeview.py  yes.py
paopao_cli/ppc_core/: config.py
paopao_cli/ppc_src/: terminal.py  version.py
paopao_cli/ppc_src/core/: ppc_git.py
test_file/test/: ppc.project.json
test_file/test/commands/: test_addon.py
