[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paopao-cli"
version = "0.0.1.dev10"
description = "🥭 PaoPao's CLI Framework - Plugin-based CLI system"
readme = "README.md"
requires-python = ">=3.9, <4.0"
authors = [{ name = "PaoPaoDev" }]
dependencies = [
    "rich>=13.0.0",
    "rich-argparse>=1.7.1",
    "GitPython>=3.1.3",
    "cffi>=1.17.0"
]

[project.license]
file = "LICENSE"

[project.scripts]
ppc = "paopao_cli.main:main"

[tool.setuptools.dynamic.readme]
file = "README.md"
content-type = "text/markdown"